Fix footer wrapping

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -253,6 +253,7 @@ aside.sidebar {
 }
 
 #license {
+  clear: both;
   display: block;
   font-size: smaller;
   img {
